[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/npc/DialogStatement.gd" type="Script" id=1]
[ext_resource path="res://media/texture/npc/portrait/female_young/p(0).jpg" type="Texture" id=2]
[ext_resource path="res://font/VarsityTeam-Bold32.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/npc/dialogRichTextLabel.gd" type="Script" id=4]

[node name="DialogStatement" type="HBoxContainer"]
margin_right = 1920.0
margin_bottom = 296.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 288.0
margin_bottom = 296.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 256.0
size_flags_horizontal = 3

[node name="CharTexture" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 16.0
margin_right = 272.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 288.0
margin_bottom = 296.0

[node name="CharName" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_right = 288.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Christina MÃ¼ller"

[node name="Statement" type="RichTextLabel" parent="."]
margin_left = 292.0
margin_right = 1920.0
margin_bottom = 296.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "asdasdasdasdasdasd
asd
asd
asd
asd
asd
asd
asd
asd
asd
asd
asdasd"
scroll_active = false
script = ExtResource( 4 )
